css: fixed spacing and symbol for TOC

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -45,17 +45,21 @@ html {
 
 .table-of-content .toc ul {
   margin: 0;
-  padding: 0 0 0 0.2rem;
+  padding: 0 0 0 0;
   list-style-type: disc;
-  list-style-position: inside;
+  list-style-position: outside;
   list-style-image: none;
   /* list-style: symbols inside none; */
 }
 
-.table-of-content .toc ul li ul {
+.table-of-content .toc ul ul {
     list-style-type: circle;
 }
 
+.table-of-content .toc ul ul ul {
+    list-style-type: square;
+    padding-left: 0.6rem;
+}
 
 /*
  * Responsive design style sheet for pelican YouTube integration.
